--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-color": "^2.18.1",
     "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
