--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-color": "^3.0.4",
+    "@types/react-datepicker": "^3.1.3",
+    "@types/react-dom": "^17.0.0",
     "chart.js": "^2.9.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -13,8 +19,9 @@
     "react-color": "^2.18.1",
     "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-toastify": "^6.0.9"
+    "react-scripts": "^4.0.1",
+    "react-toastify": "^6.0.9",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
